--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -199,10 +199,16 @@
       "Third": "हम उम्मीद करते हैं कि भविष्य में, ग्लोबल ए-टी फैमिली डेटा प्लेटफॉर्म जैविक एवं जीवनशैली संबंधी डेटा, जैसे ए-टी से पीड़ित व्यक्ति के चलने के ढंग के बारे में जानकारी प्राप्त करने के लिए पहनी जाने वाली तकनीकों का उपयोग करना, एकत्र करने के लिए अतिरिक्त संगठनों के साथ भागीदारी करेगा।"
     }
   },
+  "AccountActivation": {
+    "AccountActivationRequired": "जारी रखने से पहले आपको अपने ईमेल पते की पुष्टि करनी होगी।",
+    "EmailConfirmed": "आपके ईमेल पते की सफलतापूर्वक पुष्टि कर ली गई है। "
+  },
   "Common": {
     "Navigation": {
       "AboutThisInitiative": "इस पहल के बारे में",
       "AboutUs": "हमारे बारे में",
+      "DataAccessRequest": "डेटा एक्सेस अनुरोध",
+      "ForResearchers": "शोधकर्ताओं के लिए",
       "JoinUs": "हमसे जुड़ें",
       "Language": "भाषा",
       "LearnMore": "और जानें",
@@ -210,9 +216,7 @@
       "Next": "अगला",
       "Previous": "पिछला",
       "SignIn": "साइन इन करें",
-      "YourParticipants": "आपके प्रतिभागी",
-      "ForResearchers": "शोधकर्ताओं के लिए",
-      "DataAccessRequest": "डेटा एक्सेस अनुरोध"
+      "YourParticipants": "आपके प्रतिभागी"
     }
   },
   "DataAccess": {
@@ -368,9 +372,5 @@
       "CREATED": "शुरू नहीं हुआ",
       "IN_PROGRESS": "प्रगति अधीन"
     }
-  },
-  "AccountActivation": {
-    "AccountActivationRequired": "जारी रखने से पहले आपको अपने ईमेल पते की पुष्टि करनी होगी।",
-    "EmailConfirmed": "आपके ईमेल पते की सफलतापूर्वक पुष्टि कर ली गई है। "
   }
 }
