--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -238,10 +238,16 @@
       "Third": "Мы надеемся, что в будущем Глобальная платформа данных о семьях с A-T будет сотрудничать с другими организациями с целью сбора других биологических данных и информации об образе жизни, например, при использовании носимых устройств для сбора информации о том, как двигается человек с A-T."
     }
   },
+  "AccountActivation": {
+    "AccountActivationRequired": "Вы должны подтвердить свой адрес электронной почты, прежде чем продолжить.",
+    "EmailConfirmed": "Ваш адрес электронной почты успешно подтвержден."
+  },
   "Common": {
     "Navigation": {
       "AboutThisInitiative": "О нашей программе",
       "AboutUs": "О нас",
+      "DataAccessRequest": "Запрос на доступ к данным",
+      "ForResearchers": "Исследователям",
       "JoinUs": "Присоединиться",
       "Language": "Язык",
       "LearnMore": "Узнать больше",
@@ -249,9 +255,7 @@
       "Next": "Следующий",
       "Previous": "Предыдущий",
       "SignIn": "Войти",
-      "YourParticipants": "Ваши участники",
-      "ForResearchers": "Исследователям",
-      "DataAccessRequest": "Запрос на доступ к данным"
+      "YourParticipants": "Ваши участники"
     }
   },
   "DataAccess": {
@@ -406,9 +410,5 @@
       "CREATED": "Не начато",
       "IN_PROGRESS": "В процессе"
     }
-  },
-  "AccountActivation": {
-    "AccountActivationRequired": "Вы должны подтвердить свой адрес электронной почты, прежде чем продолжить.",
-    "EmailConfirmed": "Ваш адрес электронной почты успешно подтвержден."
   }
 }
