--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -199,29 +199,167 @@
       "Third": "Wir gehen davon aus, dass die Plattform für globale Daten von AT-Familien zukünftig mit weiteren Organisationen zusammenarbeitet, um weitere biologische und Lebensstildaten zu erfassen, unter anderem über tragbare Technologien, durch die erfasst werden kann, wie sich ein AT-Patient bewegt."
     }
   },
+  "AccountActivation": {
+    "AccountActivationRequired": "Bevor Sie fortfahren können, müssen Sie Ihre E-Mail-Adresse bestätigen.",
+    "EmailConfirmed": "Ihre E-Mail-Adresse wurde erfolgreich bestätigt."
+  },
   "Common": {
+    "Buttons": {
+      "Expand": {
+        "Title": "de_Expand"
+      },
+      "Login": {
+        "Title": "de_LOG IN"
+      },
+      "Submit": {
+        "Title": "de_Submit"
+      }
+    },
     "Navigation": {
       "AboutThisInitiative": "Über diese Initiative",
       "AboutUs": "Über uns",
+      "DataAccessRequest": "Daten Zugriffsanforderung",
+      "ForResearchers": "Für Forscher",
       "JoinUs": "Mitglied werden",
       "Language": "Sprache",
       "LearnMore": "Mehr erfahren",
+      "MedicalHistoryQuestionnaire": "de_Medical History Questionnaire",
       "MyAccount": "Mein Konto",
+      "MyDashboard": "de_My Dashboard",
       "Next": "Weiter",
       "Previous": "Zurück",
       "SignIn": "Anmelden",
-      "YourParticipants": "Ihre Teilnehmer",
-      "ForResearchers": "Für Forscher",
-      "DataAccessRequest": "Daten Zugriffsanforderung"
+      "Statistics": "de_Statistics",
+      "Submit": "de_Submit",
+      "YourParticipants": "Ihre Teilnehmer"
     }
   },
   "DataAccess": {
+    "Assurances": {
+      "AssuranceList": [
+        "de_Data will only be used for approved research.",
+        "de_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
+        "de_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
+        "de_All applicable laws and local institutional policies will be followed.",
+        "de_Data will not be sold or shared with third parties.",
+        "de_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
+        "de_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
+        "de_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
+        "de_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
+        "de_These assurances will be agreed to annually."
+      ],
+      "Controls": {
+        "ApplyingSignature": {
+          "Label": "de_Signature of Applying Researcher"
+        },
+        "Date": {
+          "Label": "de_Date"
+        }
+      },
+      "Paragraph1": "de_I agree to the following assurances:",
+      "Title": "de_Assurances Statement"
+    },
+    "Dataset": {
+      "Controls": {
+        "Genomic": {
+          "Label": "de_Genomic Data"
+        },
+        "Survey": {
+          "Label": "de_Clinical Survey Data"
+        }
+      },
+      "Messages": {
+        "FileSizeExceedsTheLimit": "de_File size exceeds the limit",
+        "ResearcherBiosketch": "de_Researcher biosketch cannot be empty.",
+        "ResearcherEmail": "de_Researcher email cannot be empty.",
+        "ResearcherName": "de_Researcher name cannot be empty.",
+        "ResearcherOrgAddress": "de_Org address 1 cannot be empty.",
+        "ResearcherOrgCity": "de_Org city cannot be empty.",
+        "ResearcherOrgCountry": "de_Org country cannot be empty.",
+        "ResearcherOrgName": "de_Org name cannot be empty.",
+        "ResearcherOrgZip": "de_Org zip cannot be empty.",
+        "ResearcherPhone": "de_Researcher phone cannot include letters.",
+        "ResearcherProjectDescription": "de_Project description cannot be empty.",
+        "ResearcherSign": "de_Researcher signature cannot be empty.",
+        "ResearcherUse": "de_Research use cannot be empty."
+      },
+      "SubTitle1": "de_Select all applicable options.",
+      "SubTitle2": "de_Specific Requests",
+      "Text1": "de_Please state the disease area(s), if any, that this study focuses on.",
+      "Title": "de_Dataset(s) requested"
+    },
     "Header": {
-      "Paragraph1": "Die Plattform für globale Daten von AT-Familien ist eine von Patienten unterstützte und von AT-Familien sowie von Experten betreute weltweite Initiative, die Forschern Gesundheits-, Gen- und andere Arten von Daten über Menschen mit AT zur Verfügung stellt. Mit dieser Plattform haben Forscher einen schnellen, sicheren und effektiven Zugriff auf wichtige Patientendaten aus der ganzen Welt, was hoffentlich zu neuen Entdeckungen führen wird."
+      "Paragraph1": "Die Plattform für globale Daten von AT-Familien ist eine von Patienten unterstützte und von AT-Familien sowie von Experten betreute weltweite Initiative, die Forschern Gesundheits-, Gen- und andere Arten von Daten über Menschen mit AT zur Verfügung stellt. Mit dieser Plattform haben Forscher einen schnellen, sicheren und effektiven Zugriff auf wichtige Patientendaten aus der ganzen Welt, was hoffentlich zu neuen Entdeckungen führen wird.",
+      "Paragraph2": "de_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
+      "Paragraph3": "de_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
+      "Paragraph4": "de_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
+      "Paragraph5": "de_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
+      "Title": "de_Data Access Request"
     },
     "OrganizationForm": {
+      "Address1": "de_Address 1",
+      "Address2": "de_Address 2",
+      "City": "de_City/Town",
       "Country": "Land",
-      "State": "Bundesland/Kanton/Provinz"
+      "Department": "de_Department",
+      "Name": "de_Organization Name",
+      "State": "Bundesland/Kanton/Provinz",
+      "Title": "de_Organization Information",
+      "Zip": "de_Zip/Postal Code"
+    },
+    "ResearcherForm": {
+      "Attachment": "de_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
+      "Email": "de_Email",
+      "Name": "de_Name",
+      "Phone": "de_Phone",
+      "Title": "de_Researcher Information"
+    },
+    "ResearchProject": {
+      "Article1": {
+        "Paragraph": "de_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
+        "Title": "de_Descriptive Title of Project"
+      },
+      "Article2": {
+        "Paragraph": "de_Collaborators at different institutions from the PI must complete a separate DAR form.",
+        "Title": "de_Names and Institutions of Collaborators"
+      },
+      "Article3": {
+        "Paragraph": "de_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
+        "Title": "de_Research Use Statement"
+      },
+      "Title": "de_Research Project Overview"
+    },
+    "TypeResearch": {
+      "Controls": {
+        "Label": "de_Controls",
+        "Paragraph": "de_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
+      },
+      "Describe": {
+        "Label": "de_Please describe"
+      },
+      "DisableStudy": {
+        "Label": "de_Disease study",
+        "Paragraph": "de_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
+      },
+      "MethodDevelopment": {
+        "Label": "de_Methods development and validation studies",
+        "Paragraph": "de_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
+      },
+      "Other": {
+        "Label": "de_Other"
+      },
+      "Population": {
+        "Label": "de_Population structure or normal variation studies",
+        "Paragraph": "de_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
+      },
+      "SubTitle": "de_Select all applicable options.",
+      "Title": "de_Type of Research"
+    }
+  },
+  "Footer": {
+    "Contacts": {
+      "Email": "support@atfamilies.org",
+      "Phone": "+1 954-481-6611"
     }
   },
   "HomePage": {
@@ -273,7 +411,9 @@
     }
   },
   "SDK": {
+    "AddButton": "de_ADD",
     "CancelButton": "Abbrechen",
+    "CloseButton": "de_Close",
     "Dashboard": {
       "Title": "Mein Gerät"
     },
@@ -287,6 +427,7 @@
         "Download": "Vollständige Einverständniserklärung herunterladen"
       }
     },
+    "EditButton": "de_Edit",
     "Institutions": {
       "Fields": {
         "City": "Ort"
@@ -299,18 +440,22 @@
     "NextButton": "Weiter",
     "PreviousButton": "Zurück",
     "RegisterButton": "Registrieren",
+    "ReviewButton": "de_Review",
     "SaveAndSubmit": "Speichern und einreichen",
     "SaveAndSubmitEnrollment": "Speichern und Registrierung einreichen",
+    "SavingButton": "de_Saving",
     "SignAndAssent": "Unterzeichnen und Zustimmung",
     "SignAndConsent": "Unterzeichnen und Einverständnis",
     "StartOrResume": "Starten/Fortsetzen",
+    "SubmitButton": "de_Submit",
     "UserActivities": {
       "ActivityActions": "Aktionen",
       "ActivityStatus": "Status"
     },
     "UserMenu": {
       "SignOutButton": "Abmelden"
-    }
+    },
+    "ValidateError": "de_"
   },
   "Toolkit": {
     "AgeUpThankYou": {
@@ -368,9 +513,5 @@
       "CREATED": "Nicht begonnen",
       "IN_PROGRESS": "In Arbeit"
     }
-  },
-  "AccountActivation": {
-    "AccountActivationRequired": "Bevor Sie fortfahren können, müssen Sie Ihre E-Mail-Adresse bestätigen.",
-    "EmailConfirmed": "Ihre E-Mail-Adresse wurde erfolgreich bestätigt."
   }
 }
