Fix upper case symbols

--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -77,7 +77,7 @@
                         "Text": "This document is several pages, but take your time. Your progress will be automatically saved so you can come back to it later.",
                         "Links": [
                             {
-                                "Text": "Preview the Consent Form",
+                                "Text": "Preview the consent form",
                                 "Asset": "consent_form.pdf"
                             }
                         ]
@@ -89,7 +89,7 @@
                         "Text": "We ask where patients have been treated, so that we can request medical records, and if applicable, archived tumor tissue.",
                         "Links": [
                             {
-                                "Text": "Preview the Medical Release",
+                                "Text": "Preview the medical release",
                                 "Asset": "medical_release_form.pdf"
                             }
                         ]
@@ -103,11 +103,11 @@
                         "Text": "In these surveys, we ask questions about your experience with brain cancer, like your brain tumor type, when you were diagnosed, and the types of treatments you’ve had.",
                         "Links": [
                             {
-                                "Text": "Preview the Adult surveys",
+                                "Text": "Preview the adult surveys",
                                 "Asset": "surveys.pdf"
                             },
                             {
-                                "Text": "Pediatric surveys",
+                                "Text": "pediatric surveys",
                                 "Asset": "pediatric_surveys.pdf"
                             }
                         ]
